--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id 'com.google.gms.google-services' version '4.3.3' apply false
+}
 allprojects {
     repositories {
         google()
